--- a/VirtualCashCard/VirtualCashCard.csproj
+++ b/VirtualCashCard/VirtualCashCard.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CashCard.cs" />
     <Compile Include="IAccount.cs" />
     <Compile Include="ICard.cs" />
+    <Compile Include="ITransactionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
